--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,10 +1,11 @@
 {
     "configurations": [
         {
-            "type": "msedge",
+            "type": "firefox",
             "name": "http://127.0.0.1:3000",
             "request": "launch",
-            "url": "http://127.0.0.1:3000"
+            "url": "http://127.0.0.1:3000",
+            "firefoxArgs": ["-headless"]
         }
     ]
 }
