--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,7 +4,7 @@
         {
             "label": "Minify and Copy Files to dist",
             "type": "shell",
-            "command": "mkdir -p dist && for file in src/**/*.js; do ./uglify-js/bin/uglifyjs \"$file\" -o \"dist/$(basename \"$file\")\" --compress --mangle; done",
+            "command": "mkdir -p dist && for file in src/**/*.js; do ./dependencies/uglify-js/bin/uglifyjs \"$file\" -o \"dist/$(basename \"$file\")\" --compress --mangle; done",
             "group": {
                 "kind": "build",
                 "isDefault": true
