--- a/jsconfig.json
+++ b/jsconfig.json
@@ -22,6 +22,8 @@
     "checkJs": true,
     "forceConsistentCasingInFileNames": true,
     "noErrorTruncation": true
-  }
-  // "include": ["src/**/*"]
+  },
+  "include": [
+    "src/**/*"
+  ]
 }
